src/objects/SPE_CategoryMaster__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CategoryMaster</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cluster__c</columns>
        <columns>Group__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CAT-{00000}</displayFormat>
        <label>CategoryMaster Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Categories Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>